Upgrade to Gradle 8.5, added Nix flake